samples/_failures_safe/1761337308_94a2e7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5b5db92b.c: In function ‘main’:
./samples/SAFE/__tmp_5b5db92b.c:161:64: error: expected ‘)’ at end of input
  161 |                     state_machine_handle_event(&sm, EVENT_ERROR
      |                                               ~                ^
      |                                                                )
./samples/SAFE/__tmp_5b5db92b.c:161:21: error: expected declaration or statement at end of input
  161 |                     state_machine_handle_event(&sm, EVENT_ERROR
      |                     ^~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_5b5db92b.c:161:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5b5db92b.c:161:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5b5db92b.c:161:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5b5db92b.c:161:21: error: expected declaration or statement at end of input
